kubernetes/minikube/bootstrap/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  rules:
    - host: simple-minikube.com
      http:
        paths:
        - path: /customer
          pathType: Prefix
          backend:
            service:
              name: customer
              port:
                number: 80
        - path: /product
          pathType: Prefix
          backend:
            service:
              name: product
              port:
                number: 80
        - path: /orders
          pathType: Prefix
          backend:
            service:
              name: orders
              port:
                number: 80
        - path: /payment
          pathType: Prefix
          backend:
            service:
              name: payment
              port:
                number: 80
        - path: /notification
          pathType: Prefix
          backend:
            service:
              name: notification
              port:
                number: 80
